--- a/schedule/scheduleserver/pom.xml
+++ b/schedule/scheduleserver/pom.xml
@@ -40,6 +40,11 @@
             <artifactId>guava</artifactId>
             <version>22.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>RELEASE</version>
+        </dependency>
     </dependencies>
 
 	<build>
